# sonic-platform-daemons

./: BUILD.bazel  MODULE.bazel
sonic-bmcctld/: BUILD.bazel
sonic-chassisd/: BUILD.bazel
sonic-ledd/: BUILD.bazel
sonic-pcied/: BUILD.bazel
sonic-psud/: BUILD.bazel
sonic-sensormond/: BUILD.bazel
sonic-stormond/: BUILD.bazel
sonic-syseepromd/: BUILD.bazel
sonic-thermalctld/: BUILD.bazel
sonic-xcvrd/: BUILD.bazel
sonic-ycabled/: BUILD.bazel
