module(
    name = "sonic-platform-daemons",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_rules_py", version = "1.11.7")
bazel_dep(name = "tar.bzl", version = "0.8.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "grpc", version = "1.71.0", repo_name = "com_github_grpc_grpc")
